<resources>
    <string name="app_name">Rest Pos</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sex">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="A_E">E</string>
    <string name="log_in">log in</string>
    <string name="clear">clear</string>
    <string name="enter_password">Enter Your Password :</string>
    <string name="required_field">Required Field!</string>
    <string name="all_fields_are_required">*All Fields Are Required!</string>
    <string name="cash_no">Cash No</string>
    <string name="password">Password</string>
    <string name="user_no">User No</string>
    <string name="store_no">Store No</string>
    <string name="service_value">Service Value</string>
    <string name="order_by">Order By</string>
    <string name="canceled">Canceled</string>
    <string name="menu">Menu</string>
    <string name="cashier_in">Cashier In</string>
    <string name="cashier_out">Cashier Out</string>
    <string name="pay_in">Pay In</string>
    <string name="pay_out">Pay Out</string>
    <string name="time_card">Time Card</string>
    <string name="safe_mode">Safe Mode</string>
    <string name="cash_drawer">Cash Drawer</string>
    <string name="transaction">Transaction Number:</string>
    <string name="value">Value</string>
    <string name="remark">Remark</string>
    <string name="branch">Branch: </string>
    <string name="user_name">User Name: </string>
    <string name="add_line_discount">Add Line Discount: </string>
    <string name="waiting_date">Waiting Date: </string>
    <string name="announcement">Announcement: </string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="back_office">Back Office</string>
    <string name="take_away">Take Away</string>
    <string name="dine_in">Dine In</string>
    <string name="Authorization_number">Authorization Number : </string>
    <string name="add_discount">Add Discount : </string>
    <string name="delivery">Delivery</string>
    <string name="add_delivery">Add Delivery Change</string>
    <string name="main_floor">Main Floor</string>
    <string name="first_floor">1st Floor</string>
    <string name="second_floor">2nd Floor</string>
    <string name="third_floor">3rd Floor</string>
    <string name="fourth_floor">4th Floor</string>
    <string name="fifth_floor">5th Floor</string>
    <string name="move">Move</string>
    <string name="merge">Merge</string>
    <string name="reservation">Reservation</string>
    <string name="close">Close</string>
    <string name="refund">Refund</string>
    <string name="check_out">Check Out</string>
    <string name="reprint">Reprint</string>
    <string name="two_chairs">2 Chairs</string>
    <string name="four_chairs">4 Chairs</string>
    <string name="six_chairs">6 Chairs</string>
    <string name="eight_chairs">8 Chairs</string>
    <string name="table_no">Table No</string>
    <string name="to_table">To Table</string>
    <string name="to_section">To Section</string>
    <string name="table_number">Table:</string>
    <string name="check_number">Check:</string>
    <string name="date">Date:</string>
    <string name="date_">Date</string>
    <string name="time">Time : </string>
    <string name="hour">Hour</string>
    <string name="memo">Memo:</string>
    <string name="waiter">Waiter:</string>
    <string name="number_of_guests">Guests:</string>
    <string name="modifier">Modifier</string>
    <string name="void_">Void</string>
    <string name="qty">Qty</string>
    <string name="money">Money</string>
    <string name="choose_picture">Choose Picture :</string>
    <string name="split">Split</string>
    <string name="discount">Discount</string>
    <string name="line_discount">Line Discount</string>
    <string name="price_change">Price Change</string>
    <string name="product_name">Pro-Name</string>
    <string name="unit_price">Price</string>
    <string name="total">Total</string>
    <string name="totals">Totals</string>
    <string name="total_price">Total Price</string>
    <string name="main_total">Main Total</string>
    <string name="zero_decimal">0.00</string>
    <string name="delivery_change">Delivery Change</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="t_b_tax">T.B Tax</string>
    <string name="service">Service</string>
    <string name="amount_due">Amount Due</string>
    <string name="cash">Cash</string>
    <string name="other_payments">Other Payments</string>
    <string name="pay">Pay</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_name">Credit Card Name</string>
    <string name="order">Order</string>
    <string name="acc_code">ACC Code</string>
    <string name="menu_registration">Menu Registration</string>
    <string name="menu_category">Menu Category</string>
    <string name="menu_name">Menu Name</string>
    <string name="price">Price</string>
    <string name="gross">Gross</string>
    <string name="tax_type">Tax Type</string>
    <string name="not_used">Not Used</string>
    <string name="no_tax">No Tax</string>
    <string name="tax_percent">Tax Percent</string>
    <string name="tax_number">Tax No : </string>
    <string name="secondary_name">Secondary Name</string>
    <string name="kitchen_name">Kitchen Alias</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="item_type">Item Type</string>
    <string name="ready_item">Ready Item</string>
    <string name="row_material">Row Material</string>
    <string name="recipe">Recipe</string>
    <string name="barcode">Barcode</string>
    <string name="item">Item</string>
    <string name="unit">Unit</string>
    <string name="cost">Cost</string>
    <string name="inventory_unit">Inventory Unit</string>
    <string name="wastage_percent">Wastage Percent</string>
    <string name="discount_available">Discount Available</string>
    <string name="point_available">Point Available</string>
    <string name="open_price">Open Price</string>
    <string name="kitchen_printers">Kitchen Printer To Use</string>
    <string name="description">description</string>
    <string name="new_">New</string>
    <string name="menu_copy">Menu Copy</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="family">Family</string>
    <string name="categories">Categories</string>
    <string name="family_name">Family Name</string>
    <string name="show_in_menu">Show In Menu</string>
    <string name="add_new_inventory_unit">Add New Inventory Unit</string>
    <string name="add_new_family">Add New Family</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="order_layout">Order Layout</string>
    <string name="add_category">+ Add Category</string>
    <string name="setting">Settings</string>
    <string name="main_settings">Main Settings</string>
    <string name="categories_setting">Categories Setting</string>
    <string name="background">Background</string>
    <string name="text_color">Text Color</string>
    <string name="default_">Default</string>
    <string name="number_of_items">Number 0f items</string>
    <string name="item_name">Item Name</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="empty_square">Empty Square</string>
    <string name="add">Add</string>
    <string name="items_settings">Items Settings</string>
    <string name="item_position">Item Position</string>
    <string name="management">Management</string>
    <string name="sales_report">Sales Report</string>
    <string name="customers">Customers</string>
    <string name="employees">Employees</string>
    <string name="menu_">Menu</string>
    <string name="announcement_">Announcement</string>
    <string name="gift_card">Gift Card</string>
    <string name="menu_search">Menu Search</string>
    <string name="employee_clock_In_Out">Employee Clock In Out</string>
    <string name="menu_category_">Menu Category</string>
    <string name="menu_registration_">Menu Registration</string>
    <string name="modifier_">Modifier</string>
    <string name="force_question">Force Question</string>
    <string name="void_reasons">Void reasons</string>
    <string name="menu_layout">Menu Layout</string>
    <string name="job_group">Job Group</string>
    <string name="employee_registration">Employee Registration</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="payroll">Payroll</string>
    <string name="vacation">Vacation</string>
    <string name="dine_in_layout">Dine In Layout</string>
    <string name="sync_with_cloud">Sync With Cloud</string>
    <string name="sales_total">Sales Total</string>
    <string name="cashier_in_out">Cashier In Out</string>
    <string name="canceled_order_history">Canceled Order History</string>
    <string name="simple_sales_total">Simple Sales Total</string>
    <string name="sales_per_hours">Sales Per Hours</string>
    <string name="sold_qty_report">Sold Qty Report</string>
    <string name="table_action_report">Table Action Report</string>
    <string name="simple_sales_total_report">Simple sales Total Report</string>
    <string name="user_order_count_report">User Order Count Report</string>
    <string name="re_cancellation_report">Re-Cancellation Report</string>
    <string name="re_cancellation_supervisor">Re-Cancellation Supervisor</string>
    <string name="enter_reason">Enter Reason :</string>
    <string name="re_cancellation_supervisor_report">Re-Cancellation Supervisor Report</string>
    <string name="sales_volume_by_item_type">Sales Volume By Item Type</string>
    <string name="sales_by_employee">Sales By Employee</string>
    <string name="market_report_">Market Report</string>
    <string name="sales_report_for_the_day">Sales Report For The Day</string>
    <string name="sales_by_hours">Sales By Hours</string>
    <string name="sales_volume_by_item">Sales Volume By Item</string>
    <string name="top_sales_item_report">Top Sales Item Report</string>
    <string name="top_group_sales_report">Top Group Sales Report</string>
    <string name="top_family_sales_report">Top Family Sales Report</string>
    <string name="sales_report_by_customer">Sales Report By Customer</string>
    <string name="sales_report_by_card_type">Sales Report By Card Type</string>
    <string name="waiter_sales_report">Waiter Sales Report</string>
    <string name="profit_loss_report">Profit/Loss Report</string>
    <string name="detail_sales_report">Detail Sales Report</string>
    <string name="store">Store</string>
    <string name="store_operation">Store Operation</string>
    <string name="users">Users</string>
    <string name="money_category">Money Category</string>
    <string name="membership_group_management">Membership Group Management</string>
    <string name="membership_management">Membership Management</string>
    <string name="save_">save</string>
    <string name="edit_save">Edit and Save</string>
    <string name="kitchen_screen">Kitchen Screen</string>
    <string name="edit_screen_text_view">* If you are want to edit an exist screen information just choose from below menu</string>
    <string name="kitchen_screen_no">Kitchen Screen NO</string>
    <string name="kitchen_screen_name">Kitchen Screen Name</string>
    <string name="kitchen_ip">Kitchen IP</string>
</resources>